# best-of-n-bayesian-ensemble-world-models

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: POSTERIOR_TAIL_SELECTION_V2_REVIEW_AUDIT.md  POSTERIOR_TAIL_SELECTION_V3_REVIEW_AUDIT.md  final_audit.md  hostile_prior_work.md  literature_map.md  novelty_decision.md  proof_claim_audit.md  related_work_matrix.csv  reproducibility.md  reviewer_attacks.md  v4_execution_plan.md
experiments/: run_benchmark.py  run_v3_evidence.py  run_v4_gym_benchmark.py  run_v4_mujoco_benchmark.py
paper/: generated_results.tex  generated_v4_results.tex  main.tex  references.bib
paper/final/: best of n bayesian ensemble world models-v4-manifest.json
results/full/: calibration.csv  generated_results.tex  manifest.json  summary.csv
results/smoke/: calibration.csv  generated_results.tex  manifest.json  results.csv  summary.csv
results/v3/: calibration_coverage.csv  claim_evidence_audit.md  generated_results.tex  learned_results.csv  learned_summary.csv  manifest.json  paired_effects.csv  stress_summary.csv
results/v4/: gym_calibration.csv  gym_paired_effects.csv  gym_results.csv  gym_summary.csv  protocol_freeze.json
results/v4_mujoco/: generated_v4_mujoco_results.tex  mujoco_calibration.csv  mujoco_paired_effects.csv  mujoco_results.csv  mujoco_summary.csv  (+1 more)
scripts/: build_paper.ps1  run_all.ps1  run_all.sh  run_smoke.ps1  run_smoke.sh
tests/: test_experiment.py  test_learned.py  test_selectors.py  test_v3_evidence.py  test_v4_gym_benchmark.py  test_v4_mujoco_benchmark.py  test_world_model.py
(+10 files in other folders)
